--- a/BookStoreWebMvc/BookStoreWebMvc/Views/Nguoidung/Dangky.cshtml
+++ b/BookStoreWebMvc/BookStoreWebMvc/Views/Nguoidung/Dangky.cshtml
@@ -1,76 +1,75 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Dangky";
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
+<h2 style="text-align:center">ĐĂNG KÝ THÀNH VIÊN</h2>
 <table align="center">
-    <h2 style="text-align:center">ĐĂNG KÝ THÀNH VIÊN</h2>
     @using (Html.BeginForm())
     {
         @Html.ValidationSummary(true)
         <tr style="height:40px">
             <td>Họ tên khách hàng:</td>
             <td>
-                @Html.TextBox("HotenKH")
-                @ViewData["Loi 1"]
+                @Html.TextBox("HotenKH", null, new { @class = "form-control" })
+                <span style="color:red;">@ViewData["Loi1"]</span>
             </td>
         </tr>
-        <tr style="height:40px" autocomplete="off">
-            <td >Tên đăng nhập:</td>
+        <tr style="height:40px">
+            <td>Tên đăng nhập:</td>
             <td>
-                @Html.TextBox("TenDN")
-                @ViewData["Loi 2"]
-            </td>      
+                @Html.TextBox("TenDN", null, new { @class = "form-control" })
+                <span style="color:red;">@ViewData["Loi2"]</span>
+            </td>
         </tr>
-        <tr style="height:40px" autocomplete="off">
+        <tr style="height:40px">
             <td>Mật khẩu:</td>
             <td>
-                @Html.Password("Matkhau")
-                @ViewData["Loi 3"] 
+                @Html.Password("Matkhau", null, new { @class = "form-control" })
+                <span style="color:red;">@ViewData["Loi3"]</span>
             </td>
         </tr>
-        <tr style="height:40px" autocomplete="off">
+        <tr style="height:40px">
             <td>Nhập lại mật khẩu:</td>
             <td>
-                @Html.Password("Nhaplaimatkhau")
-                @ViewData["Loi 4"]
+                @Html.Password("Nhaplaimatkhau", null, new { @class = "form-control" })
+                <span style="color:red;">@ViewData["Loi4"]</span>
             </td>
         </tr>
         <tr style="height:40px">
             <td>Email:</td>
             <td>
-                @Html.TextBox("Email")
-                @ViewData["Loi 5"]
+                @Html.TextBox("Email", null, new { @class = "form-control" })
+                <span style="color:red;">@ViewData["Loi5"]</span>
             </td>
         </tr>
         <tr style="height:40px">
             <td>Địa chỉ:</td>
             <td>
-                @Html.TextBox("Diachi")
-                @ViewData["Loi 6"]
+                @Html.TextBox("Diachi", null, new { @class = "form-control" })
             </td>
         </tr>
         <tr style="height:40px">
             <td>Điện thoại:</td>
             <td>
-                @Html.TextBox("Dienthoai")
-                @ViewData["Loi 7"]
+                @Html.TextBox("Dienthoai", null, new { @class = "form-control" })
+                <span style="color:red;">@ViewData["Loi6"]</span>
             </td>
         </tr>
         <tr style="height:40px">
             <td>Ngày sinh:</td>
             <td>
-                <input type="date" name="Ngaysinh" />
+                <div style="display: flex; align-items: center;">
+                    <input type="date" name="Ngaysinh" class="form-control" style="flex: 1;" />
+                    <span style="color:red; margin-left: 10px; white-space: nowrap;">@ViewData["Loi7"]</span>
+                </div>
             </td>
         </tr>
-
         <tr style="height:40px">
             <td></td>
             <td>
-                <input type="submit" name="Đăng ký"/>           
+                <input type="submit" value="Đăng ký" class="btn btn-primary" />
             </td>
         </tr>
     }
 </table>
-
